feat: complete the order API module
